# matrix_kit

./: Cargo.toml  README.md
src/: algebra.rs  dynamic.rs  lib.rs  matrix.rs
src/dynamic/: dmatrix.rs  dynamic_vector_util.rs  matrix.rs
tests/: matrix_tests.rs
