[package]
name = "matrix_kit"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A simple cryptographic suite for Rust"
readme = "README.md"
repository = "https://github.com/SylvanM/matrix_kit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
