[package]
name = "matrix_kit"
version = "0.1.8"
edition = "2021"
license = "GPL-3.0-or-later"
description = "An abstract linear algebra library for Rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra_kit = "0.1.10"
rand = "0.8.5"
