[package]
name = "matrix_kit"
version = "0.2.20"
edition = "2021"
license = "GPL-3.0-or-later"
description = "An abstract linear algebra library for Rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra_kit = "0.1.10"
num-traits = "0.2.19"
rand = "0.9.0"
rand_distr = "0.5.1"
